# llm-sieve

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PATENT_NOTICE  README.md  RELEASE_AUDIT.md  SECURITY.md  WRITER_LATENCY_BATTERY_DESIGN.md  WRITER_LATENCY_BATTERY_RESULTS.md  demo.tape  mkdocs.yml  pyproject.toml  requirements.txt  sieve.example.yaml  sieve.test.example.yaml
.github/: PULL_REQUEST_TEMPLATE.md
branding/: BRAND.md  Dockerfile.vhs  README.md  bench-fixture.txt  render-gifs.sh  sieve-benchmark.tape  sieve-demo.cast  sieve-quick-install.tape  sieve-wizard-install.tape  sieve-wizard.tape  stub_provider.py
docs/: changelog.md  cli-reference.md  configuration.md  diagnostic-headers.md  getting-started.md  index.md  installation.md  llms.txt
evaluation/: RESULTS_SUMMARY.md  smoke_progressive_activation.md
scripts/: make_figures.py  sterilise.sh
sieve/: __init__.py  _agent_fixture.py  _autostart.py  _branding.py  _grader.py  _installer.py  _menu.py  _pricing.py  _sandbox.py  _sparkline.py  _wizard_app.py  _wizard_helpers.py  _writer_classifier.py  backup.py  classifier.py  cli.py  cli_benchmark.py  cli_config.py  cli_keys.py  cli_store_inspect.py  cli_uninstall.py  cli_update.py  cli_wizard.py  clock.py  config.py  config_modes.py  config_surfaces.py  context_format_v2.py  embeddings.py  embeddings_provider.py  extreme_summary.py  fact_classifier_v2.py  fingerprint.py  history_preamble_adapter.py  learning.py  main.py  openclaw_adapter.py  pipeline.py  progression.py  proxy.py  (+13 more)
tests/: bench_helpers.py  conftest.py  seed_test.py  test_autostart.py  test_benchmarks.py  test_bootstrap_owner_pin.py  test_branding.py  test_classifier.py  test_cli_backup.py  test_cli_benchmark.py  test_cli_config.py  test_cli_install_matrix.py  test_cli_keys.py  (+60 more)
(+22 files in other folders)
