[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-sieve"
version = "1.0.0"
description = "Transparent context reduction for LLMs"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Azard Tennant-Hosein"}]
keywords = ["llm", "agent", "memory", "context", "rag", "proxy", "ollama"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "httpx>=0.28",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
    "xxhash>=3.4",
    "sqlcipher3>=0.6",
    "sqlite-vec>=0.1.9",
    "pydantic>=2.0",
    "fastembed>=0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
]

[project.scripts]
sieve = "sieve.cli:main"

[project.urls]
Homepage = "https://llmsieve.com"
Documentation = "https://llmsieve.dev"
Repository = "https://github.com/llmsieve/llm-sieve"
Issues = "https://github.com/llmsieve/llm-sieve/issues"
Changelog = "https://github.com/llmsieve/llm-sieve/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["sieve"]
